--- a/frontend/fitness-club/public/index.html
+++ b/frontend/fitness-club/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./assets/img/logo/logoicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     />
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
-    <title>React App</title>
+    <title>Fitness-Club</title>
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
