--- a/frontend/fitness-club/public/index.html
+++ b/frontend/fitness-club/public/index.html
@@ -46,6 +46,22 @@
     <link rel="stylesheet" href="/assets/fonts/fontawesome-all.min.css" />
     <!--Silde bar ecommerce page-->
     <link rel="stylesheet" href="/assets/css/best-carousel-slide.css" />
+    <!--Home Page Featured Section Servies-->
+    <link rel="stylesheet" href="/assets/css/Feature-Section-MD.css" />
+    <!--Home Page-->
+    <link rel="stylesheet" href="/assets/css/style.css" />
+
+    <!--Image Gallery Home Page-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+    />
+    <link rel="stylesheet" href="/assets/css/Basic-fancyBox-Gallery.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css"
+    />
+
     <title>Fitness-Club</title>
   </head>
   <body id="page-top">
@@ -61,6 +77,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--Galley Grid Home Page-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
+    <script src="assets/js/Basic-fancyBox-Gallery.js"></script>
   </body>
 </html>
 
