--- a/frontend/fitness-club/public/index.html
+++ b/frontend/fitness-club/public/index.html
@@ -62,6 +62,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css"
     />
 
+    <!-- PayHere  -->
+    <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
     <title>Fitness-Club</title>
   </head>
   <body id="page-top">
