--- a/frontend/fitness-club/public/index.html
+++ b/frontend/fitness-club/public/index.html
@@ -85,6 +85,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
     <script src="assets/js/Basic-fancyBox-Gallery.js"></script>
+    <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
   </body>
 </html>
 
